# iterated_prisoner-s_dilemma

./: .gitignore  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Game.cpp  Game.h  Main.cpp  Match.cpp  Match.h  Player.cpp  Player.h  README.md
Strategies/: Alternator.cpp  Appeaser.cpp  Cooperator.cpp  Defector.cpp  Forgiver.cpp  Punisher.cpp  Random.cpp  TitForTat.cpp
